logo flicker fix

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -494,10 +494,6 @@ table tr td {
   margin: 0;
 }
 
-logo-box {
-  margin: 0;
-}
-
 #toolbar {
   margin-bottom: 1em;
 }
@@ -750,6 +746,10 @@ p:last-child {
 #logo-box,
 #title-box {
   margin: 0;
+}
+
+#logo-box{
+  min-height: 5rem;
 }
 
 #title-box {
